tests/test_data/invalid_semantics/type_checking/function_in_expr.c
int f(void);

int main(void)
{
  -f;
  1 + f;
}
